@@ -1,3 +1,6 @@
+dipole-20110309
++ enhanced output for dipole-convergency 
+
 --> POTFIT-20101207 released
 
 devel-20101207
